tests/files/type_checker_tests/should_fail/206.cmdr
//Should fail asserts when not using bool
assert 3, "hello";
